--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <ion-list inset>
-    <ion-card *ngFor = "let n of [0,1,2,3,4,5]" (tap)="tapEvent($event,n)" (swipe)="swipeEvent($event,n)">
+    <ion-card *ngFor = "let n of [0,1,2,3,4,5]" (tap)="tapEvent($event,n)" (swipe)="swipeEvent($event,n)" (press)="pressEvent($event,n)">
       <ion-item>
         <img [ngClass]="{'big': taps[n] == 1, 
                         'left': dirHs[n] == -1, 'right': dirHs[n] == 1}"
