--- a/src/pages/elementary/elementary.html
+++ b/src/pages/elementary/elementary.html
@@ -5,6 +5,6 @@
 </ion-header>
 
 <ion-content>
-  <my-map-inner></my-map-inner>
+  <my-map-inner focus = '%E5%B0%8F%E5%AD%B8%E6%95%B8%E5%AD%B8%E5%9C%B0%E5%9C%96'></my-map-inner>
   
 </ion-content>
