--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -14,38 +14,70 @@
 
 
 <ion-content padding>
-	<h1>攀岩式學習地圖</h1>
+  <ion-card>
+		<ion-card-header>
+			攀岩式學習地圖
+		</ion-card-header>
+		<ion-card-content>
 
-	<ion-icon name="key" color="primary"></ion-icon>
+			<ion-icon name="key" color="primary"></ion-icon>
 
-	<p>你曾經想過，除了一年級、二年級，<br/>我們還可以怎麼看待「學習」這件事嗎？</p>
-	<p>其實，學習並不是一條直線，<br/>我們可以自主規劃合理的進程。</p>
-	<hr/>
+			<p>你曾經想過，除了一年級、二年級，<br/>我們還可以怎麼看待「學習」這件事嗎？</p>
+			<p>其實，學習並不是一條直線，<br/>我們可以自主規劃合理的進程。</p>
+			<hr/>
 
-	<ion-icon name="key" color="secondary"></ion-icon>
-	<p>每個知識有它的先備知識</p>
-	<p>先備知識學起來<br/>再往前就不難了</p>
-	<p>就像攀岩<br/>你要去頂端，得先爬到它的下面</p>
-	
-	<hr/>
-	<ion-icon name="key" color="primary"></ion-icon>	
-	<p>循著知識地圖<br/>從你會的出發<br/>找一個目標<br/>就可以一步一步往上爬</p>
+			<ion-icon name="eye" color="secondary"></ion-icon>
 
+			<p>每個知識有它的先備知識</p>
+			<p>先備知識學起來<br/>再往前就不難了</p>
+			<p>就像攀岩<br/>你要去頂端，得先爬到它的下面</p>
+			<hr/>
 
-	<ion-icon name="key" color="secondary"></ion-icon>
+			<ion-icon name="key" color="primary"></ion-icon>	
 
-	<p>如果遇到困難，<br/>請記得往前倒溯</p>
-	<p>比方說，如果學習分數有困難，<br/>可先複習它的先備知識-除法</p>
-	<p>如果學習除法有困難，<br/>可先複習它的先備知識-乘法與減法</p>
-	<hr/>
-	
-	<ion-icon name="key" color="primary"></ion-icon>
-	<p>國高中的數學也是一樣<br/>二次方程式學不會，可先複習一次方程式</p>
-	<p>三角函數弄不懂，可先複習相似三角形、勾股定理、函數的意義</p>
-	<hr/>
+			<p>循著知識地圖<br/>從你會的出發<br/>找一個目標<br/>就可以一步一步往上爬</p>
+			<hr/>
 
-	<ion-icon name="key" color="secondary"></ion-icon>
-	<p>手機版僅供檢視<br/>友善列印，請上<a href="http://math.alearn.org.tw/%E5%AD%B8%E7%BF%92%E5%9C%B0%E5%9C%96/" target="_blank">自由數學網站</a></p>
-	<hr/>
+			<ion-icon name="eye" color="secondary"></ion-icon>
+
+			<p>如果遇到困難，<br/>請記得往前倒溯</p>
+			<p>比方說，如果學習「分數」有困難，<br/>可先複習「除法」</p>
+			<p>如果學習「除法」有困難，<br/>可先複習「乘法」與「減法」</p>
+			<hr/>
+			
+			<ion-icon name="key" color="primary"></ion-icon>
+			<p>國高中的數學也是一樣</p>
+			<p>「直角座標」學不會，<br/>可先複習「數線」<br/>「三角函數」弄不懂，<br/>可先複習「相似三角形」</p>
+			<hr/>
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card>
+		<ion-card-header>
+			操作方式
+		</ion-card-header>
+		<ion-card-content>
+			<ion-list>
+				<ion-item>
+						<ion-icon name="arrow-round-down" color="secondary"></ion-icon>
+						輕觸: 放大/縮小</ion-item>
+				<ion-item>
+						<ion-icon name="swap" color="secondary"></ion-icon>側滑: 移動
+				</ion-item>
+				<ion-item>
+						<ion-icon name="contract" color="secondary"></ion-icon>
+						用力按: 聚焦</ion-item>
+			</ion-list>
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card>
+		<ion-card-header>
+			瞭解更多
+		</ion-card-header>
+		<ion-card-content>
+			<p>如要列印紙本<br/>畫記圈選<br/>請上<a href="http://math.alearn.org.tw/%E5%AD%B8%E7%BF%92%E5%9C%B0%E5%9C%96/" target="_blank">自由數學網站</a></p>
+		</ion-card-content>
+	</ion-card>
 
 </ion-content>
