--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab0Root" tabTitle="使用說明" tabIcon="key"></ion-tab>
+  <ion-tab [root]="tab0Root" tabTitle="說明" tabIcon="key"></ion-tab>
   <ion-tab [root]="tab1Root" tabTitle="小學" tabIcon="ionitron"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="國中" tabIcon="flask"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="高中" tabIcon="flower"></ion-tab>
