--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -58,15 +58,24 @@
 		</ion-card-header>
 		<ion-card-content>
 			<ion-list>
+				<ion-item>						
+					先在下方選取一則地圖：
+					<ion-icon name="ionitron" color="primary"></ion-icon>
+					<ion-icon name="flask" color="primary"></ion-icon>
+					<ion-icon name="flower" color="primary"></ion-icon>
+				</ion-item>
+				<ion-item>
 				<ion-item>
 						<ion-icon name="arrow-round-down" color="secondary"></ion-icon>
-						輕觸: 放大/縮小</ion-item>
+						輕觸: 放大/縮小
+				</ion-item>
 				<ion-item>
 						<ion-icon name="swap" color="secondary"></ion-icon>側滑: 移動
 				</ion-item>
 				<ion-item>
 						<ion-icon name="contract" color="secondary"></ion-icon>
-						用力按: 聚焦</ion-item>
+						用力按: 聚焦
+					</ion-item>
 			</ion-list>
 		</ion-card-content>
 	</ion-card>
