--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -65,6 +65,9 @@
 					<ion-icon name="flower" color="primary"></ion-icon>
 				</ion-item>
 				<ion-item>
+					之後
+				</ion-item>
+				<ion-item>
 						<ion-icon name="arrow-round-down" color="secondary"></ion-icon>
 						輕觸: 放大/縮小
 				</ion-item>
