--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -59,10 +59,12 @@
 		<ion-card-content>
 			<ion-list>
 				<ion-item>						
-					先在下方選取一則地圖：
-					<ion-icon name="ionitron" color="primary"></ion-icon>
-					<ion-icon name="flask" color="primary"></ion-icon>
-					<ion-icon name="flower" color="primary"></ion-icon>
+					先在下方<br/>選取地圖：
+					<ion-icon name="ionitron" color="primary"></ion-icon>小學
+					<br/>
+					<ion-icon name="flask" color="primary"></ion-icon>國中
+					<br/>
+					<ion-icon name="flower" color="primary"></ion-icon>高中
 				</ion-item>
 				<ion-item>
 					之後
